kubernetes/plain-resources/application-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
  namespace: default
  labels:
    app: testapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: "nginx:latest"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
