kubernetes/plain-resources/application-test/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: testapp
  namespace: default
  labels:
    app: testapp
spec:
  type: ClusterIP
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
