kubernetes/plain-resources/application-test/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: testapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt-staging-issuer"
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: test.happynuts.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testapp
            port:
              number: 80
  tls:
  - hosts:
    - test.happynuts.me
    secretName: test.happynuts.me-tls
